[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/art/gui/produce.png" type="Texture" id=1]
[ext_resource path="res://src/Gui/ComposeGui.gd" type="Script" id=2]

[node name="ComposeGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 33, 0 )
scale = Vector2( 1.01875, 0.893443 )
texture = ExtResource( 1 )
centered = false

[node name="BtnRecord" type="Button" parent="."]
margin_left = 232.0
margin_top = 433.0
margin_right = 378.0
margin_bottom = 472.0
text = "Record Album"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnNewSong" type="Button" parent="."]
margin_left = 615.0
margin_top = 471.0
margin_right = 761.0
margin_bottom = 510.0
text = "Create New Song"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptWriter" type="OptionButton" parent="."]
margin_left = 632.0
margin_top = 290.0
margin_right = 796.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptMelody" type="OptionButton" parent="."]
margin_left = 633.0
margin_top = 364.0
margin_right = 797.0
margin_bottom = 394.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeSongTitle" type="TextEdit" parent="."]
margin_left = 630.0
margin_top = 427.0
margin_right = 797.0
margin_bottom = 455.0
text = "Song Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxSongs" type="VBoxContainer" parent="."]
margin_left = 494.0
margin_top = 93.0
margin_right = 929.0
margin_bottom = 274.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxAlbum" type="VBoxContainer" parent="."]
margin_left = 96.0
margin_top = 116.0
margin_right = 468.0
margin_bottom = 402.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="BtnRecord" to="." method="_on_BtnRecord_button_up"]
[connection signal="button_up" from="BtnNewSong" to="." method="_on_BtnNewSong_button_up"]
